fixed landscape on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -39,7 +39,7 @@ nav {
     width: 4rem !important;
   }
 
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: $mobile) {
     img {
       margin-left: 1em;
     }
@@ -137,12 +137,7 @@ nav {
   min-height: 300px;
   height: 62vh;
 
-  @media screen and (min-width: 421px) and (max-width: 768px) {
-    h1 {
-      font-size: 3em;
-    }
-  }
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: $mobile) {
     margin: 2em;
 
     h1 {
@@ -295,7 +290,7 @@ nav {
     margin-bottom: 20vh;
   }
 
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: $mobile) {
     h1 {
       margin: 0.5em auto !important;
     }
@@ -358,7 +353,7 @@ nav {
 #download-title {
   margin-top: 5%;
 
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: $mobile) {
     h1 {
       margin: 0.5em auto;
     }
@@ -424,7 +419,7 @@ nav {
   justify-content: space-around;
   flex-direction: column;
 
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: $mobile) {
     padding-bottom: 1em;
     padding-top: 0;
     height: min-content;
@@ -514,7 +509,7 @@ nav {
 
 /* Team */
 .team-wrapper {
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: $mobile) {
     h1 {
       margin: 0.5em auto !important;
     }
